--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,11 +116,10 @@ jobs:
           #flutter-version: ${{env.FLUTTER_VERSION}}    
       #Creating the key.properties file
       - run: |
-          echo "${{ secrets.GOOGLE_SERVICE }}" > android/app/google-services.json
           echo keyPassword=\${{ secrets.KEY_STORE }} > ${{env.PROPERTIES_PATH}}
           echo storePassword=\${{ secrets.KEY_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
           echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
-
+    
       # Decoding base64 key into a file
       - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks 
       #- run: echo "${{ secrets.GOOGLE_SERVICE }}" > android/app/google-services.json
@@ -141,8 +140,8 @@ jobs:
           name: appbundle_release
           path: build/app/outputs/bundle/release
       # Decode Google services configuration file
-      #- name: Decode google-services.json
-      #  run: echo ${{ secrets.GOOGLE_SERVECE }} > android/app/google-services.json
+      - name: Decode google-services.json
+        run: echo '${{ secrets.GOOGLE_SERVECE }}' | --decode > android/app/google-services.json  
       # Creating service_account.json
       - name: Create service_account.json FROM secrets.SERVICE_ACCOUNT_JSON
         run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
