--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -140,8 +140,14 @@ jobs:
           name: appbundle_release
           path: build/app/outputs/bundle/release
       # Decode Google services configuration file
+      #- name: Decode google-services.json
+      # run: echo '${{ secrets.GOOGLE_SERVECE }}' > android/app/google-services.json  
+      # Decode Google services configuration file
       - name: Decode google-services.json
-        run: echo '${{ secrets.GOOGLE_SERVECE }}' | --decode > android/app/google-services.json  
+        env:
+          FIREBASE_CONFIG: ${{ secrets.GOOGLE_SERVECE }}
+        run: echo $FIREBASE_CONFIG > app/google-services.json
+
       # Creating service_account.json
       - name: Create service_account.json FROM secrets.SERVICE_ACCOUNT_JSON
         run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
