--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,7 @@ android {
         release {
             //From decoded key
             storeFile = file('key.jks')
+            storeFile = file('google-services.json')
             //From key.properties
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
