config secret set file g-s.json C

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -122,7 +122,7 @@ jobs:
     
       # Decoding base64 key into a file
       - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks    
-      - run: echo '${{ secrets.GOOGLE_SERVECE }}' > android/app/google-services.json
+      - run: echo "${{ secrets.GOOGLE_SERVECES }}" > android/app/google-services.json
       #- run: echo "${{ secrets.GOOGLE_SERVICE }}" > android/app/google-services.json
           
       # Get dependencies and make assigned appbundle
