--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
           reporter: flutter-json
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
         with:
-          min_coverage: 5
+          min_coverage: 30
       - uses: codecov/codecov-action@v2
         with:
           file: coverage/lcov.info    
@@ -121,10 +121,8 @@ jobs:
           echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
     
       # Decoding base64 key into a file
-      - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks    
-      - run: echo "${{ secrets.GOOGLE_SERVECES }}" > android/app/google-services.json
-      #- run: echo "${{ secrets.GOOGLE_SERVICE }}" > android/app/google-services.json
-          
+      - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks   
+
       # Get dependencies and make assigned appbundle
       - run: |
           export PATH="$PATH":"$HOME/.pub-cache/bin"
@@ -140,7 +138,10 @@ jobs:
         with:
           name: appbundle_release
           path: build/app/outputs/bundle/release
-        
+      # Creating google-services.json
+      - name: Create file google-services.json  FROM secrets.GOOGLE_SERVECES 
+        run: echo '${{ secrets.GOOGLE_SERVECES }}' > android/app/google-services.json
+
       # Creating service_account.json
       - name: Create service_account.json FROM secrets.SERVICE_ACCOUNT_JSON
         run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
