--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,17 +1,8 @@
 name: CI/CD
-#on:
-#  push:
-#    tags:
-#      - v*
-on: 
+on:
   push:
-    branches:
-      - develop
-      - main
-  pull_request:
-    branches:
-      - develop
-      - main
+    tags:
+      - v*
 
 env:
   JAVA_VERSION: "12.x"
