--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.0'
     repositories {
         google()
         jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' } 
+  
     }
 
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
     }
 }
 
