--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   share_plus: ^3.0.4
   path_provider: ^2.0.6
   provider: ^6.0.1
+  onesignal_flutter: ^3.2.7
   
 
 flutter_icons:
