--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,11 +52,21 @@ android {
     signingConfigs {
         release {
             //From decoded key
-            storeFile = file('key.jks')
+            //storeFile = file('key.jks')
             //From key.properties
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storePassword keystoreProperties['storePassword']
+            if (keystorePropertiesFile.exists()) {
+                //From decoded key
+                storeFile = file(keystoreProperties['storeFile'])
+                //From key.properties
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storePassword keystoreProperties['storePassword']
+            }else {
+                storeFile = file('key.jks')
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storePassword keystoreProperties['storePassword']
+            }
         }
     }
 
