--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.0.6
   provider: ^6.0.1
   onesignal_flutter: ^3.2.7
+  numberpicker: ^2.1.1
   
 
 flutter_icons:
