--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 /android/key.properties
-#/android/app/google-services.json
+/android/app/google-services.json
 #keys
 /docs/key
 /docs/pswd
