--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,17 +3,17 @@ description: Simples consulta a cotação de moedas
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.2.0+14
+version: 1.2.0+15
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_modular: ^4.2.0 #3.3.1
+  flutter_modular: ^5.0.3
   mobx: ^2.0.3
   flutter_mobx: ^2.0.1
   dio: ^4.0.0
@@ -25,12 +25,11 @@ dependencies:
   flutter_launcher_icons: ^0.9.1
   rate_my_app: ^1.1.0+1
   launch_review: ^3.0.1
-  http: ^0.13.4
   firebase_analytics: ^8.3.4
   firebase_core: ^1.8.0
   chart_sparkline: ^1.0.5
   screenshot: ^1.2.3
-  share_plus: ^3.0.4
+  share_plus: ^4.0.7
   path_provider: ^2.0.6
   onesignal_flutter: ^3.2.7
   numberpicker: ^2.1.1
@@ -43,7 +42,7 @@ flutter_icons:
   ios: true
 
 dev_dependencies:
-  modular_test: ^1.0.1+1
+  modular_test: ^2.0.0
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.0.2
