--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,3 +4,4 @@ android.enableJetifier=true
 org.gradle.parallel=true
 org.gradle.caching=true
 android.nonTransitiveRClass=true
+android.suppressUnsupportedCompileSdk=35
