--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Simples consulta a cotação de moedas
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.2.0+15
+version: 1.0.0+4
 
 environment:
   sdk: ^3.7.0
@@ -23,7 +23,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   rate_my_app: ^2.3.1
   launch_review_latest: ^1.0.0
-  firebase_analytics: ^10.7.4
+  #firebase_analytics: ^10.7.4
   firebase_core: ^2.24.2
   chart_sparkline: ^1.0.5
   screenshot: ^3.0.0
